CHANGES IN FLTK 1.1.0rc3

	- Documentation updates.
	- The file chooser would return the last selected
	  file(s) when cancel was pressed.
	- The file chooser limited the resizing of the chooser
	  window unnecessarily.
	- Fixed WM_PAINT handling under WIN32.
	- Minor tweeks to MingW and OS/2 config headers.
	- Fl_Value_Input now correctly determines if step()
	  specifies an integer value.
	- Fl_Help_View didn't add links inside PRE elements.
	- OS/2 build fixes from Alexander Mai.
	- Now use strlcat() instead of strncat() which could
	  cause buffer overflows.
	- Now use of strlcpy() instead of strncpy() to simplify
	  the code.
	- Drag-n-drop under WIN32 now shows a [+] cursor instead
	  of the link cursor.
	- Fixed widget width tooltip and default argument
	  handling code in FLUID.
	- Fixed colors used when drawing antialiased text using
	  Xft.
	- Fl_Preferences::makePath() now uses access() instead
	  of stat() when checking to see if the destination
	  directory already exists.
	- Fl_BMP_Image now supports older BMP files with the 12
	  byte header.
	- Optimized the redrawing of tabs and radio/check
	  buttons when the keyboard focus changes.
	- More tooltip fixes.
	- DND text operations would loop under X11.


CHANGES IN FLTK 1.1.0rc2

	- Portability fixes.
	- Backported 2.0 tooltip changes.
	- Several of the valuators did not support tooltips.
	- The last menu item in a menu didn't pick up on font
	  changes.
	- FLUID now properly handles default argument parameters
	  properly.
	- Fixed WM_PAINT handling under WIN32 - didn't validate
	  the correct region that was drawn.
	- Fl_Multiline_Output would insert the enter key.
	- Fl_File_Browser didn't clip items to the column width.
	- Fl_Window::draw() cleared the window label but didn't
	  restore it, so windows could lose their titles.
	- Eliminated multiple definitions of dirent structure
	  when compiling under WIN32.
	- Adjusted the size of the circle that is drawn inside